# ferrisletter

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  lefthook.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
admin/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx  global.css  main.tsx
admin/src/components/: connect-gate.tsx  feed-dialog.tsx  tag-input.tsx  topic-dialog.tsx
admin/src/components/layout/: app-shell.tsx  sidebar.tsx
admin/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  separator.tsx  textarea.tsx
admin/src/lib/: api.ts  mcp.ts  utils.ts
admin/src/pages/: Connectors.tsx  Dashboard.tsx  Export.tsx  Topics.tsx
admin/src/store/: connection.ts  draft.ts
admin/src/types/: index.ts
crates/connector/: Cargo.toml  README.md
crates/connector-rss/: Cargo.toml
crates/connector-rss/src/: lib.rs
crates/connector-static/: Cargo.toml
crates/connector-static/src/: lib.rs
crates/connector/src/: error.rs  factory.rs  lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  main.rs
crates/server/: Cargo.toml  build.rs
crates/server/data/: sample.json
crates/server/src/: api.rs  auth.rs  config.rs  favorites.rs  health.rs  lib.rs  main.rs  server.rs  telemetry.rs  theme.rs  transport.rs  ui_server.rs  users.rs
design/: 00-vision.md  01-revised-vision.md  02-delivery-model.md  03-decisions-locked.md  04-open-core-model.md  05-monorepo-structure.md
docs/: architecture.md
docs/mcp-clients/: claude-desktop.md  cursor.md  zed.md
examples/: ferrisletter-demo.toml  ferrisletter-ngrok.toml  ferrisletter-sse.toml  ferrisletter.toml  sample-newsletter.json
scripts/: setup-claude-desktop.sh
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  global.css  main.tsx
ui/src/components/: ResultRow.tsx  ResultsList.tsx  ViewToggle.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  search-bar.tsx  separator.tsx  skeleton.tsx  sort-controls.tsx  tag-filter.tsx
ui/src/lib/: demo-data.ts  host-context.ts  mcp.ts  search-utils.ts  utils.ts
ui/src/types/: index.ts
ui/src/views/: CompactIssue.tsx  FavoritesPanel.tsx  RecapPanel.tsx  SearchPanel.tsx
website/: astro.config.mjs  package-lock.json  package.json
website/src/components/: Architecture.tsx  CTA.tsx  ChatDemo.tsx  CodeBlock.tsx  DocsSidebar.tsx  Features.tsx  Footer.astro  Hero.tsx  HowItsDifferent.tsx  Nav.tsx  PageHeader.astro  TechStack.tsx  ThemeGallery.tsx  ThemePreview.tsx
website/src/layouts/: DocsLayout.astro  Layout.astro
website/src/pages/: connect.astro  features.astro  index.astro  themes.astro
website/src/pages/docs/: building-connectors.astro  connect-claude.astro  display-preferences.astro  getting-started.astro  index.astro  scheduled-delivery.astro
website/src/styles/: global.css
