[package]
name = "ferrisletter-connector-rss"
description = "RSS/Atom feed connector for Ferrisletter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrisletter-connector = { path = "../connector" }
reqwest = { version = "0.12", features = ["json"] }
feed-rs = "2"
tokio = { version = "1", features = ["full"] }
