[package]
name = "ferrisletter-connector-rss"
description = "RSS/Atom feed connector for Ferrisletter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrisletter-connector = { path = "../connector" }
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "2"
reqwest = "0.12"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
