[package]
name = "ferrisletter-connector-static"
description = "Static JSON/Markdown connector for Ferrisletter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrisletter-connector = { path = "../connector" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
