[package]
name = "ferrisletter-connector-static"
description = "Static JSON connector for Ferrisletter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrisletter-connector = { path = "../connector" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
