[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
