[package]
name = "ferrisletter-server"
description = "MCP server for Ferrisletter conversational newsletters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrisletter-connector = { path = "../connector" }
ferrisletter-connector-rss = { path = "../connector-rss" }
ferrisletter-connector-static = { path = "../connector-static" }
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server"] }
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
schemars = "1"
thiserror = "2"
toml = { version = "0.8", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
