[package]
name = "ferrisletter-server"
description = "MCP server for Ferrisletter conversational newsletters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ferrisletter_server"
path = "src/lib.rs"

[[bin]]
name = "ferrisletter-server"
path = "src/main.rs"

[features]
default = []
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dependencies]
ferrisletter-connector = { path = "../connector" }
ferrisletter-connector-rss = { path = "../connector-rss" }
ferrisletter-connector-static = { path = "../connector-static" }
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server"] }
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
schemars = "1"
thiserror = "2"
toml = { version = "0.8", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

# Optional: OpenTelemetry instrumentation (behind `telemetry` feature flag)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
